@@ -104,6 +104,7 @@ export(subsetByRareTaxa)
 export(subsetFeatures)
 export(subsetSamples)
 export(subsetTaxa)
+export(summarizeDominance)
 export(taxonomyTree)
 export(testExperimentCrossAssociation)
 export(testExperimentCrossCorrelation)
@@ -202,6 +203,7 @@ exportMethods(subsetByRareTaxa)
 exportMethods(subsetFeatures)
 exportMethods(subsetSamples)
 exportMethods(subsetTaxa)
+exportMethods(summarizeDominance)
 exportMethods(summary)
 exportMethods(taxonomyRankEmpty)
 exportMethods(taxonomyRanks)
