@@ -364,6 +364,38 @@ loadFromHumann <- function(...) {
 
 #' @rdname deprecate
 #' @export
+setGeneric("countDominantFeatures", signature = c("x"),
+            function(x, ...)
+                standardGeneric("countDominantFeatures"))
+
+#' @rdname deprecate
+#' @export
+setMethod("countDominantFeatures", signature = c(x = "SummarizedExperiment"),
+            function(x, ...){
+                .Deprecated(msg = "'countDominantFeatures' function is deprecated. ",
+                            "Use 'summarizeDominance' instead.")
+                summarizeDominance(x, ...)
+            }
+)
+
+#' @rdname deprecate
+#' @export
+setGeneric("countDominantTaxa", signature = c("x"),
+           function(x, ...)
+               standardGeneric("countDominantTaxa"))
+
+#' @rdname deprecate
+#' @export
+setMethod("countDominantTaxa", signature = c(x = "SummarizedExperiment"),
+          function(x, ...){
+              .Deprecated(msg = "'countDominantTaxa' function is deprecated. ",
+                          "Use 'summarizeDominance' instead.")
+              summarizeDominance(x, ...)
+          }
+)
+
+#' @rdname deprecate
+#' @export
 setGeneric("full_join", signature = c("x"),
            function(x, ...)
                standardGeneric("full_join"))
