@@ -55,10 +55,10 @@ test_that("summaries", {
                                  assay.type = "counts") )
     expect_equal( getUniqueTaxa(GlobalPatterns, "Phylum", sort = TRUE),
                   getUniqueFeatures(GlobalPatterns, "Phylum", sort = TRUE) )
-    expect_equal( countDominantTaxa(GlobalPatterns),
-                  countDominantFeatures(GlobalPatterns))
+    expect_equal( summarizeDominance(GlobalPatterns),
+                  summarizeDominance(GlobalPatterns))
     
     # Test with multiple equal dominant taxa in one sample
     assay(GlobalPatterns)[1, 1] <- max(assay(GlobalPatterns)[, 1])
-    expect_warning(countDominantFeatures(GlobalPatterns, complete = FALSE))
+    expect_warning(summarizeDominance(GlobalPatterns, complete = FALSE))
 })
