@@ -121,3 +121,4 @@ Changes in version 1.13.x
 + getHierarchyTree: bugfix related to empty cells in rowData
 + agglomerateByRank: bugfix: trees was not pruned correctly
 + rename meltAssay to meltSE
++ Rename countDominantFeatures and countDominantTaxa to summarizeDominance
